Show newly created tags in the context menus

There's still a bit of a mess, in that deleted unused tags aren't cleaned
up, so we'll need a cleanup feature for that.

BUG:325291